# my-library-repo

./: pyproject.toml  requirements.txt
src/: exceptions.py
src/api/: auth.py  books.py  dependencies.py
src/core/: config.py  db.py  db_manager.py
src/models/: books.py  reviews.py  users.py
src/repositories/: base.py  books.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: books.py  users.py
src/services/: auth.py  books.py
src/utils/: auth_utils.py
tests/unit_tests/: test_auth_service.py  test_books_service.py
